remove overflow:hidden as it prevents the iframe scrolling
git-svn-id: https://svn.apache.org/repos/asf/incubator/wookie/trunk@1082334 13f79535-47bb-0310-9956-ffa450edef68

--- a/widgets/widget-template/wave/style/screen.css
+++ b/widgets/widget-template/wave/style/screen.css
@@ -23,10 +23,6 @@ html, body {
   margin:0; 
   border:0; 
   font-family: "trebuchet ms", tahoma, verdana, arial, sans-serif;
-  /* hide overflow:hidden from IE5/Mac */ 
-  /* \*/ 
-  overflow: hidden; 
-  /* */ 
 }
 
 #wookie-widget {
